# Entropia_Skill_Scanner

./: .gitignore  README.md  professions.csv  pyproject.toml  skills2.csv  skills3.csv  skills4.csv  skills5.csv
data/: professions.json  professions_list.json
src/entropia_skillscanner/: __init__.py  api.py  app.py  audio_feedback.py  cli.py  config.py  exporter.py  import_skills_csv.py  models.py  resources.py  skill_dedupe.py  taxonomy.py  view_model.py
src/entropia_skillscanner/core/: __init__.py  models.py
src/entropia_skillscanner/professions/: __init__.py  compute.py  loader.py
src/entropia_skillscanner/runtime/: __init__.py  pipeline_runner.py
src/pipeline/: __init__.py  extract_columns.py  extract_rows.py  extract_skill_name.py  extract_skill_window.py  extract_table.py  parse_points_decimal.py  parse_points_int.py  parse_points_value.py  profession_store.py  professions.py  run_pipeline.py  skill_vocab.py  skills_vocab.txt  stage_results.py  timing.py
src/tools/: extract_profession_data.py
tests/: conftest.py  profile_pipeline.py  smoke_test_one_screenshot.py  smoke_test_pipeline.py  smoke_test_skill_name_extract.py  test_config.py  test_exporter.py  test_pipeline_stage_errors.py
tests/integration/cli/: test_cli.py
tests/integration/pipeline/: test_pipeline_stage_errors.py
tests/manual/: debug_points_decimal_from_screenshot.py  smoke_test_one_screenshot.py  smoke_test_points_from_screenshot.py
tests/unit/app/: test_view_model.py
tests/unit/config/: test_config.py
tests/unit/professions/: test_professions.py
(+1 files in other folders)
