[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "entropia-skillscanner"
version = "0.0.0"

[project.scripts]
entropia-skillscanner = "entropia_skillscanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

