[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "entropia-skillscanner"
version = "0.0.0"

[project.scripts]
entropia-skillscanner = "entropia_skillscanner.cli:main"

[tool.entropia_skillscanner]
schema = "OLD"
include_professions = true
debug_pipeline = false

[tool.entropia_skillscanner.paths]
data_dir = "data"
professions_weights = "data/professions.json"
professions_list = "data/professions_list.json"

[tool.entropia_skillscanner.pipeline]
norm_width = 1400
min_table_density = 0.010

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
